--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,6 @@ prune doc/build
 prune doc/source/generated
 prune doc/source/sknano
 prune doc/source/images
+prune doc/source/_static
+prune doc/source/_template
 global-exclude *.pyc *~ *.bak *.swp *.pyo
