fix pattern matching of test output files

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,6 @@ tclIndex
 
 # test output files #
 #####################
-tests/*.xyz
-tests/*.data
-tests/*.pdb
+**/tests/*.xyz
+**/tests/*.data
+**/tests/*.pdb
