updating .gitignore to ignore output from tests in parent package directory

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,12 @@ tclIndex
 
 # test output files #
 #####################
+./*.xyz
+./*.data
+./*.pdb
+sknano/*.xyz
+sknano/*.data
+sknano/*.pdb
 **/tests/*.xyz
 **/tests/*.data
 **/tests/*.pdb
