fix file name pattern to ignore test output files in root directory

--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,9 @@ tclIndex
 
 # test output files #
 #####################
-./*.xyz
-./*.data
-./*.pdb
+/*.xyz
+/*.data
+/*.pdb
 sknano/*.xyz
 sknano/*.data
 sknano/*.pdb
