--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,4 +10,4 @@ prune doc/source/sknano
 prune doc/source/images
 prune doc/source/_static
 prune doc/source/_templates
-global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo
+global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo *.ropeproject
