--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "doc/sphinxext/numpydoc"]
-	path = doc/sphinxext/numpydoc
-	url = git@github.com:numpy/numpydoc.git
+    path = doc/sphinxext/numpydoc
+    url = https://github.com/numpy/numpydoc.git
