--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ python:
   - "3.4"
 install:
   - pip install --upgrade pip setuptools
-  - pip install --upgrade nose
-  - pip install --upgrade six
-  # pip install coverage
+  - pip install coverage nose six numpy scipy
+  - python setup.py install
 script: nosetests
