--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
   - "3.4"
 install:
   - pip install --upgrade pip setuptools
-  - pip install coverage nose six numpy scipy
+  - pip install --upgrade coverage
+  - pip install --upgrade nose
+  - pip install --upgrade six
+  - pip install --upgrade numpy
+  - pip install --upgrade scipy
   - python setup.py install
 script: nosetests
