--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,32 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
-install:
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
+  - sudo apt-get install -qq libgmp-dev libmpfr-dev
+  - mkdir builds
+  - pushd builds
+  # Install gmpy2 dependencies
+  - wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.2.tar.gz
+  - tar xzvf mpc-1.0.2.tar.gz
+  - pushd mpc-1.0.2
+  - ./configure
+  - make
+  - sudo make install
+  - popd
+  # End install gmpy2 dependencies
   - pip install --upgrade pip setuptools
-  - pip install --upgrade coverage
-  - pip install --upgrade nose
-  - pip install --upgrade six
-  - pip install --upgrade numpy
-  - pip install --upgrade scipy
+  - pip install numpy
+  - pip install coverage
+  - pip install coveralls
+  - pip install nose
+  - pip install six
+  - pip install mpmath
+  - pip install argparse
+  - pip install gmpy2
+  - pip install scipy
+  - popd
+install:
   - python setup.py install
 script: nosetests
