--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,29 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
   - sudo apt-get install -qq libgmp-dev libmpfr-dev
-  - mkdir builds
-  - pushd builds
-  # Install gmpy2 dependencies
-  - wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.2.tar.gz
-  - tar xzvf mpc-1.0.2.tar.gz
-  - pushd mpc-1.0.2
-  - ./configure
-  - make
-  - sudo make install
-  - popd
+  #- mkdir builds
+  #- pushd builds
+  ## Install gmpy2 dependencies
+  #- wget ftp://ftp.gnu.org/gnu/mpc/mpc-1.0.2.tar.gz
+  #- tar xzvf mpc-1.0.2.tar.gz
+  #- pushd mpc-1.0.2
+  #- ./configure
+  #- make
+  #- sudo make install
+  #- popd
   # End install gmpy2 dependencies
   - pip install --upgrade pip setuptools
-  - pip install numpy
+  #- pip install numpy
   - pip install coverage
   - pip install coveralls
-  - pip install nose
-  - pip install six
-  - pip install mpmath
-  - pip install argparse
-  - pip install gmpy2
-  - travis_wait pip install scipy
-  - popd
+  #- pip install nose
+  #- pip install six
+  #- pip install mpmath
+  #- pip install argparse
+  #- pip install gmpy2
+  #- travis_wait pip install scipy
+  #- popd
+  - sudo apt-get install -qq python3-scipy python3-nose
 install:
   - python setup.py install
 script: nosetests
