--- a/.travis.yml
+++ b/.travis.yml
@@ -18,19 +18,18 @@ before_install:
   #- sudo make install
   #- popd
   # End install gmpy2 dependencies
+  #- popd
+  #- sudo apt-get install -qq python3-scipy python3-nose python3-six
+install:
   - pip install --upgrade pip setuptools
-  #- pip install numpy
+  - pip install numpy
   - pip install coverage
   - pip install coveralls
-  #- pip install nose
-  #- pip install six
+  - pip install nose
+  - pip install six
   #- pip install mpmath
   #- pip install argparse
   #- pip install gmpy2
-  #- travis_wait pip install scipy
-  #- popd
-  - sudo apt-get install -qq python3-scipy python3-nose python3-six
-  - toggleglobalsitepackages
-install:
+  - travis_wait pip -v install scipy
   - python setup.py install
 script: nosetests
