removing verbose output from pip install scipy command

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ install:
   #- pip install mpmath
   #- pip install argparse
   #- pip install gmpy2
-  - travis_wait pip -v install scipy
+  - travis_wait pip install scipy
   - python setup.py install
 script: nosetests
