--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
+
 language: python
+
 python:
   - "3.4"
+
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
@@ -19,17 +22,20 @@ before_install:
   #- popd
   # End install gmpy2 dependencies
   #- popd
-  #- sudo apt-get install -qq python3-scipy python3-nose python3-six
+
 install:
   - pip install --upgrade pip setuptools
-  - pip install numpy
-  - pip install coverage
-  - pip install coveralls
-  - pip install nose
-  - pip install six
+  - travis_wait pip install -r requirements.txt
+  - pip install --upgrade nose
+  - pip install --upgrade coverage
+  - pip install --upgrade coveralls
   #- pip install mpmath
   #- pip install argparse
   #- pip install gmpy2
-  - travis_wait pip install scipy
+  #- travis_wait pip install scipy
   - python setup.py install
-script: nosetests
+
+script: nosetests --with-coverage --cover-package sknano
+
+after_success:
+  - coveralls
