--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
   #- travis_wait pip install scipy
   - python setup.py install
 
-script: nosetests --with-coverage --cover-package sknano
+script: nosetests --with-coverage
 
 after_success:
   - coveralls
