updating MANIFEST to prune .venv files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,4 +18,4 @@ prune doc/source/sknano
 prune doc/source/images
 prune doc/source/_static
 prune doc/source/_templates
-global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo
+global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo *.venv
