--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ language: python
 python:
   - "3.4"
 
+virtualenv:
+  system_site_packages: true
+
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
   - sudo apt-get install -qq libgmp-dev libmpfr-dev
+  - travis_wait pip install -r requirements.txt
   #- mkdir builds
   #- pushd builds
   ## Install gmpy2 dependencies
@@ -24,18 +28,18 @@ before_install:
   #- popd
 
 install:
-  - pip install --upgrade pip setuptools
-  - travis_wait pip install -r requirements.txt
-  - pip install --upgrade nose
-  - pip install --upgrade coverage
-  - pip install --upgrade coveralls
+  #- pip install --upgrade pip setuptools
+  #- travis_wait pip install -r requirements.txt
+  #- pip install --upgrade nose
+  #- pip install --upgrade coverage
+  #- pip install --upgrade coveralls
   #- pip install mpmath
   #- pip install argparse
   #- pip install gmpy2
   #- travis_wait pip install scipy
   - python setup.py install
 
-script: nosetests --with-coverage
+script: nosetests  # --with-coverage
 
-after_success:
-  - coveralls
+# after_success:
+#   - coveralls
