tweaking MANIFEST includes/excludes

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,13 +4,14 @@ include *.txt
 # Top-level build scripts
 include setup.py setupegg.py
 # All source files
-recursive-include sknano *
+recursive-include sknano *.py *.json *.yaml
 # All documentation
 recursive-include doc *
 # Add build and testing tools
 include tox.ini
 recursive-include tools *
 # Exclude what we don't want to include
+recursive-exclude sknano/apps/nanogen_gui *.sh *.ui
 prune */__pycache__
 prune */.ropeproject
 prune doc/build
@@ -21,4 +22,4 @@ prune doc/source/proBlue
 prune doc/source/images
 prune doc/source/_static
 prune doc/source/_templates
-global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo *.venv
+global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo *.venv *.ui *.sublime*
