--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ addons:
       - ccache
 install: source tools/ci/install.sh
 script: bash tools/ci/travis_tests.sh
-# after_success:
-#   - coveralls
+after_success:
+  - if [[ "$COVERAGE" == "true" ]]; then coveralls || echo "failed"; fi
