--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,6 +14,7 @@ recursive-include tools *
 recursive-exclude sknano/apps/nanogen_gui *.sh *.ui
 prune */__pycache__
 prune */.ropeproject
+prune */.venv
 prune doc/build
 prune doc/sphinxext
 prune doc/source/generated
