--- a/sknano/generators/tests/test_layered_structure.cfg
+++ b/sknano/generators/tests/test_layered_structure.cfg
@@ -1,5 +1,5 @@
 [layer 1]
-generator_class = SWNTBundleGenerator
+generator_class = SWNTGenerator
 parameters = (10, 5), nx=6, ny=1, nz=8
 [layer 2]
 generator_class = FCCStructureGenerator
