Updating doc source config and theme config.

--- a/doc/source/themes/scikit-nano/theme.conf
+++ b/doc/source/themes/scikit-nano/theme.conf
@@ -1,11 +1,11 @@
 [theme]
 inherit = basic
-stylesheet = sknano.css
+stylesheet = scikit-nano.css
 pygments_style = friendly
 
 [options]
 edit_link = false
 rootlinks = []
 sidebar = left
-sknano_logo =
+scikit_nano_logo =
 navigation_links = true
