--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 atomicfile>=1.0
 Cython>=0.22.1
 #future>=0.14.3
-monty>=0.6.5
-numpy>=1.9.1
+monty>=0.8.0
+numpy>=1.10.4
 prettytable>=0.7.2
 pybtex>=0.18
 pyhull>=1.5.4
-pymatgen>=3.1.6
+pymatgen>=3.3.4
+pyparsing>=2.0.5
 PyYAML>=3.11
-requests>=2.7.0
-scipy>=0.15.0
-six>=1.9.0
-wheel>=0.24.0
+requests>=2.9.1
+scipy>=0.17.0
+six>=1.10.0
+wheel>=0.26.0
