updating doc sources/theme files

--- a/doc/source/themes/scikit-nano/theme.conf
+++ b/doc/source/themes/scikit-nano/theme.conf
@@ -1,11 +1,9 @@
 [theme]
 inherit = basic
-stylesheet = scikit-nano.css
+stylesheet = bootstrap-scikit-nano.css
 pygments_style = friendly
 
 [options]
-edit_link = false
-rootlinks = []
-sidebar = left
-scikit_nano_logo =
-navigation_links = true
+logotext1 = scikit-
+logotext2 = nano
+logotext3 = :docs
