updating setup.py dependency version requirements

--- a/tools/ci/rtd-conda-env.yml
+++ b/tools/ci/rtd-conda-env.yml
@@ -10,4 +10,11 @@ dependencies:
   - cython
   - ipython
   - matplotlib
+  - argcomplete
   - pandas
+  - xlsxwriter
+  - nose
+  - sphinx
+  - hdf5
+  - h5py
+  - tables
