updating sphinx-build Makefile

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,7 @@
 # Makefile for Sphinx documentation
 #
 
-PYVER = 3.4
+PYVER = 3.5
 PYTHON = python$(PYVER)
 
 # You can set these variables from the command line.
@@ -11,10 +11,13 @@ PAPER         =
 
 FILES=
 
+#BUILD_DIR 		= /mnt/data1/build/sphinx-build/scikit-nano
+BUILD_DIR 		= build
+
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
-ALLSPHINXOPTS   = -d build/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
+ALLSPHINXOPTS   = -d $(BUILD_DIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
 
 .PHONY: help clean html web pickle htmlhelp latex changes linkcheck \
         dist dist-build
@@ -34,7 +37,7 @@ help:
 	@echo "  upload USER=...  to upload results to docs.scipy.org"
 
 clean:
-	-rm -rf build/* source/generated
+	-rm -rf $(BUILD_DIR)/* source/generated *.xyz
 
 
 #------------------------------------------------------------------------------
@@ -49,7 +52,7 @@ clean:
 # - Different versions of easy_install install to different directories (!)
 #
 
-INSTALL_DIR = $(CURDIR)/build/inst-dist/
+INSTALL_DIR = $(CURDIR)/$(BUILD_DIR)/inst-dist/
 INSTALL_PPH = $(INSTALL_DIR)/lib/python$(PYVER)/site-packages:$(INSTALL_DIR)/local/lib/python$(PYVER)/site-packages:$(INSTALL_DIR)/lib/python$(PYVER)/dist-packages:$(INSTALL_DIR)/local/lib/python$(PYVER)/dist-packages
 
 DIST_VARS=PYTHON="PYTHONPATH=$(INSTALL_PPH):$$PYTHONPATH python$(PYVER)" SPHINXBUILD="LANG=C PYTHONPATH=$(INSTALL_PPH):$$PYTHONPATH python$(PYVER) `which sphinx-build`"
@@ -58,19 +61,19 @@ dist:
 	make $(DIST_VARS) real-dist
 
 real-dist: dist-build html html-sknanowiki
-	test -d build/latex || make latex
-	make -C build/latex all-pdf
-	-test -d build/htmlhelp || make htmlhelp-build
-	-rm -rf build/dist
-	mkdir -p build/dist
-	cp -r build/html-sknanowiki build/dist/reference
-	touch build/dist/index.html
-	(cd build/html && zip -9qr ../dist/scipy-html.zip .)
-	cp build/latex/scipy*.pdf build/dist
-	-zip build/dist/scipy-chm.zip build/htmlhelp/scipy.chm
-	chmod ug=rwX,o=rX -R build/dist
-	find build/dist -type d -print0 | xargs -0r chmod g+s
-	cd build/dist && tar czf ../dist.tar.gz *
+	test -d $(BUILD_DIR)/latex || make latex
+	make -C $(BUILD_DIR)/latex all-pdf
+	-test -d $(BUILD_DIR)/htmlhelp || make htmlhelp-build
+	-rm -rf $(BUILD_DIR)/dist
+	mkdir -p $(BUILD_DIR)/dist
+	cp -r $(BUILD_DIR)/html-sknanowiki $(BUILD_DIR)/dist/reference
+	touch $(BUILD_DIR)/dist/index.html
+	(cd $(BUILD_DIR)/html && zip -9qr ../dist/scipy-html.zip .)
+	cp $(BUILD_DIR)/latex/scipy*.pdf $(BUILD_DIR)/dist
+	-zip $(BUILD_DIR)/dist/scipy-chm.zip $(BUILD_DIR)/htmlhelp/scipy.chm
+	chmod ug=rwX,o=rX -R $(BUILD_DIR)/dist
+	find $(BUILD_DIR)/dist -type d -print0 | xargs -0r chmod g+s
+	cd $(BUILD_DIR)/dist && tar czf ../dist.tar.gz *
 
 dist-build:
 	rm -f ../dist/*.egg
@@ -84,62 +87,62 @@ dist-build:
 #------------------------------------------------------------------------------
 
 html:
-	mkdir -p build/html build/doctrees
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) build/html $(FILES)
+	mkdir -p $(BUILD_DIR)/html $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILD_DIR)/html $(FILES)
 	@echo
-	@echo "Build finished. The HTML pages are in build/html."
+	@echo "Build finished. The HTML pages are in $(BUILD_DIR)/html."
 
 html-sknanowiki:
-	mkdir -p build/html build/doctrees
-	$(SPHINXBUILD) -t sknanowiki -b html $(ALLSPHINXOPTS) build/html-sknanowiki $(FILES)
+	mkdir -p $(BUILD_DIR)/html $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -t sknanowiki -b html $(ALLSPHINXOPTS) $(BUILD_DIR)/html-sknanowiki $(FILES)
 	@echo
-	@echo "Build finished. The HTML pages are in build/html."
+	@echo "Build finished. The HTML pages are in $(BUILD_DIR)/html."
 
 pickle:
-	mkdir -p build/pickle build/doctrees
-	$(SPHINXBUILD) -b pickle $(ALLSPHINXOPTS) build/pickle $(FILES)
+	mkdir -p $(BUILD_DIR)/pickle $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b pickle $(ALLSPHINXOPTS) $(BUILD_DIR)/pickle $(FILES)
 	@echo
 	@echo "Build finished; now you can process the pickle files or run"
-	@echo "  sphinx-web build/pickle"
+	@echo "  sphinx-web $(BUILD_DIR)/pickle"
 	@echo "to start the sphinx-web server."
 
 web: pickle
 
 htmlhelp:
-	mkdir -p build/htmlhelp build/doctrees
-	$(SPHINXBUILD) -b htmlhelp $(ALLSPHINXOPTS) build/htmlhelp $(FILES)
+	mkdir -p $(BUILD_DIR)/htmlhelp $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b htmlhelp $(ALLSPHINXOPTS) $(BUILD_DIR)/htmlhelp $(FILES)
 	@echo
 	@echo "Build finished; now you can run HTML Help Workshop with the" \
-	      ".hhp project file in build/htmlhelp."
+	      ".hhp project file in $(BUILD_DIR)/htmlhelp."
 
-htmlhelp-build: htmlhelp build/htmlhelp/scipy.chm
+htmlhelp-build: htmlhelp $(BUILD_DIR)/htmlhelp/scipy.chm
 %.chm: %.hhp
 	-hhc.exe $^
 
 latex:
-	mkdir -p build/latex build/doctrees
-	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) build/latex $(FILES)
-	$(PYTHON) postprocess.py tex build/latex/*.tex
-	perl -pi -e 's/\t(latex.*|pdflatex) (.*)/\t-$$1 -interaction batchmode $$2/' build/latex/Makefile
+	mkdir -p $(BUILD_DIR)/latex $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILD_DIR)/latex $(FILES)
+	$(PYTHON) postprocess.py tex $(BUILD_DIR)/latex/*.tex
+	perl -pi -e 's/\t(latex.*|pdflatex) (.*)/\t-$$1 -interaction batchmode $$2/' $(BUILD_DIR)/latex/Makefile
 	@echo
-	@echo "Build finished; the LaTeX files are in build/latex."
+	@echo "Build finished; the LaTeX files are in $(BUILD_DIR)/latex."
 	@echo "Run \`make all-pdf' or \`make all-ps' in that directory to" \
 	      "run these through (pdf)latex."
 
 coverage: build
-	mkdir -p build/coverage build/doctrees
-	$(SPHINXBUILD) -b coverage $(ALLSPHINXOPTS) build/coverage $(FILES)
-	@echo "Coverage finished; see c.txt and python.txt in build/coverage"
+	mkdir -p $(BUILD_DIR)/coverage $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b coverage $(ALLSPHINXOPTS) $(BUILD_DIR)/coverage $(FILES)
+	@echo "Coverage finished; see c.txt and python.txt in $(BUILD_DIR)/coverage"
 
 changes:
-	mkdir -p build/changes build/doctrees
-	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) build/changes $(FILES)
+	mkdir -p $(BUILD_DIR)/changes $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) $(BUILD_DIR)/changes $(FILES)
 	@echo
 	@echo "The overview file is in build/changes."
 
 linkcheck:
-	mkdir -p build/linkcheck build/doctrees
-	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) build/linkcheck $(FILES)
+	mkdir -p $(BUILD_DIR)/linkcheck $(BUILD_DIR)/doctrees
+	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) $(BUILD_DIR)/linkcheck $(FILES)
 	@echo
 	@echo "Link check complete; look for any errors in the above output " \
 	      "or in build/linkcheck/output.txt."
