--- a/sknano/generators/tests/test_layered_structure.cfg
+++ b/sknano/generators/tests/test_layered_structure.cfg
@@ -1,8 +1,6 @@
-[layer 1]
-generator_class = SWNTGenerator
+[SWNTGenerator]
 parameters = (10, 5), nx=3, ny=3, nz=2
-[layer 2]
-generator_class = FCCStructureGenerator
+[FCCGenerator]
 parameters = basis='Ag', scaling_matrix=[3, 3, 3]
 [settings]
 #fname = layered_structure.xyz
