--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,12 +15,7 @@ recursive-exclude sknano/apps/nanogen_gui *.sh *.ui
 prune */__pycache__
 prune */.ropeproject
 prune */.venv
-prune doc/build
-prune doc/sphinxext
-prune doc/source/generated
-prune doc/source/sknano
-prune doc/source/proBlue
-prune doc/source/images
-prune doc/source/_static
-prune doc/source/_templates
+prune doc/source/_build
+prune doc/source/api
+prune build
 global-exclude *.pyc *~ *.bak *.xlsx *.swp *.pyo *.venv *.ui *.sublime*
