updating test config file

--- a/sknano/generators/tests/test_layered_structure.cfg
+++ b/sknano/generators/tests/test_layered_structure.cfg
@@ -1,9 +1,11 @@
-[SWNTGenerator]
-parameters = (10, 5), nx=3, ny=3, nz=2
 [FCCGenerator]
-parameters = basis='Ag', scaling_matrix=[3, 3, 3]
+layer = 1
+parameters = basis='Ag', scaling_matrix=[5, 3, 3]
+[SWNTGenerator]
+layer = 2
+parameters = (5, 0), nx=3, ny=1, nz=3
 [settings]
 #fname = layered_structure.xyz
 structure_format = xyz
-overlap = 2.0
-#selection = element Ag and y>= 0 and (not within 1.5 of element C)
+overlap = 1.5
+selection = element C or element Ag and (not within 1.8 of element C)
